# hspec-formatters-codewars

./: .gitignore  README.md  cabal.project.freeze  hie.yaml  hspec-formatters-codewars.cabal  package.yaml
.github/workflows/: ci.yml
src/Test/Hspec/Formatters/: Codewars.hs
test/: ExampleSpec.hs  Helper.hs  Main.hs
test/Spec/: ExampleSpec.hs
test/Test/Hspec/Formatters/: CodewarsSpec.hs
