cabal-version: >=1.10

name: hspec-formatters-codewars
version: 0.1.0
synopsis: Hspec formatter for Codewars
homepage: https://githuc.com/codewars/hspec-formatters-codewars
license: MIT
build-type: Simple

library
  hs-source-dirs:
      src
  build-depends:
      base ==4.*
    , hspec ==2.*
    , hspec-core ==2.*
    , text ==1.*
  exposed-modules:
      Test.Hspec.Formatters.Codewars
  default-language:
      Haskell2010
